extra js file removed and css & js files location changed

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
   <link href="assets/css/aos.css" rel="stylesheet">
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/styles/main.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
 </head>
 
 <body id="top">
@@ -22,7 +22,7 @@
   <script src="assets/js/core/bootstrap.min.js"></script>
   <script src="assets/js/now-ui-kit.js?v=1.1.0"></script>
   <script src="assets/js/aos.js"></script>
-  <script src="assets/scripts/main.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
